dodanie THREE.JS i generowanie modelu samochodu

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -18,5 +18,14 @@
     "unknownError": "There's been an error. Please contact Support",
     "weldingUploadOk": "Welding points have been added to the list of welding points",
     "noModFilesFound": "Backup does not contain .mod files",
-    "noWeldingSpotsFound": "No welding points were found in the files"
+    "noWeldingSpotsFound": "No welding points were found in the files",
+    "spotTable" : "Welding Spots",
+    "natureOfCode" : "Nature of code",
+    "randomWalker": "Random walker",
+    "show": "Show",
+    "spotName": "Name",
+    "modelName": "Model",
+    "pointX": "Position X",
+    "pointY": "Position Y",
+    "pointZ": "Position Z"
 }
